Format fix: search icon off center for mobile

--- a/web/assets/css/webavatar.css
+++ b/web/assets/css/webavatar.css
@@ -265,6 +265,12 @@ body {
   transition: var(--transition);
 }
 
+@media (max-width: 576px) {
+  .search-icon {
+    top: 25%;
+  }
+}
+
 .search-input-container:focus-within .search-icon {
   color: var(--main-color);
 }
